--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,18 +2,15 @@ name: build
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["main", "dev"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["main", "dev"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: make
-      run: make -j2
-    - name: make check
-      run: make check -j2
+      - uses: actions/checkout@v3
+      - name: make
+        run: make -j2
